--- a/classes/zedbit/mailx/.gitignore
+++ b/classes/zedbit/mailx/.gitignore
@@ -1,6 +1,8 @@
 #
-# in this class directory, ignore the classes, thus preserving
+# In this class directory, ignore the classes, thus preserving
 # the class directory structure, and not keeping the classes
+# 
+# http://stackoverflow.com/questions/14541253/commit-empty-folder-structure-with-git
 # 
 #
 *.class
